<!--
  ~ Copyright AziKar24 19/2/2023.
  -->

<resources>
    <string name="app_name_2">WormaCeptor</string>

    <string name="body_unexpected_eof">\n\n--- Unexpected end of content ---</string>
    <string name="body_content_truncated">\n\n--- Content truncated ---</string>
    <string name="notification_title">Recording HTTP activity</string>
    <string name="notification_category">WormaCeptor HTTP notifications</string>


    <string name="request">Request</string>
    <string name="response">Response</string>
    <string name="url">URL</string>
    <string name="method">Method</string>
    <string name="protocol">Protocol</string>
    <string name="status">Status</string>
    <string name="ssl">SSL</string>
    <string name="request_time">Request time</string>
    <string name="response_time">Response time</string>
    <string name="duration">Duration</string>
    <string name="request_size">Request size</string>
    <string name="response_size">Response size</string>
    <string name="total_size">Total size</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="body_omitted">(encoded or binary body omitted)</string>

    <string name="clear">Clear</string>
    <string name="dismiss">Dismiss</string>
    <string name="search">Search</string>
    <string name="browse_sql_database">Browse SQLite database</string>
    <string name="share">share</string>
    <string name="share_as_text">Share as text</string>
    <string name="share_as_curl">Share as curl command</string>
    <string name="overview">Overview</string>
    <string name="search_request_hint">Search Request and Headers</string>
    <string name="search_response_hint">Search Response and Headers</string>
    <string name="crashes">Crashes</string>
    <string name="network">Network</string>



    <string name="stack_trace_string">at %1$s.%2$s(%3$s:%4$d)</string>
    <string name="bracket_string_newline_string">[%1$s]\n\n%2$s</string>
    <string name="duration_ms">%1$d ms</string>
    <string name="counter">%1$d/%2$d</string>
    <string name="failed_status">!!!</string>
    <string name="unknown">Unknown</string>
    <string name="email_crash_title">Crashes Reported From WormaCeptor</string>
</resources>