<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright AziKar24 19/2/2023.
  -->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".internal.ui.network.details.fragments.NetworkNetworkTransactionOverviewFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detailsUrlTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                tools:text="https://example.com/path/to/resource?here=might_be_really_long" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/method"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/methodTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                tools:text="GET" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protocol"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/protocolTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                tools:text="HTTP/1.1" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/statusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                tools:text="Complete" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/response"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/responseTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                tools:text="200 OK" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ssl"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sslTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                tools:text="Yes" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request_time"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/requestTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                tools:text="05/02/17 11:52:49" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/response_time"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/responseTimeTextView"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                tools:text="05/02/17 11:52:49" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/durationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                tools:text="405 ms" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/request_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/requestSizeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                tools:text="53 KB" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/response_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/responseSizeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                tools:text="148 KB" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalSizeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                tools:text="201 KB" />

        </TableRow>

    </TableLayout>

</androidx.core.widget.NestedScrollView>
